# livekit-portal

./: .gitignore  Cargo.toml  README.md  implementation.md  spec.md
.github/workflows/: publish.yml  python-tests.yml  tests.yml
docs/: concepts.md  frame-video.md  lerobot.md  portal-api.md  quickstart.md  rpc.md  rtc.md  synchronization.md  tuning.md
examples/python/basic/: .env.example  _common.py  pyproject.toml  robot.py  teleoperator.py
examples/python/inference/: .env.example  README.md  _common.py  policy.py  pyproject.toml  robot.py
examples/python/rtc/: .env.example  README.md  _common.py  policy.py  policy_modal.py  pyproject.toml  robot.py
examples/python/so101/: .env.example  README.md  _common.py  pyproject.toml  robot.py  teleoperator.py
livekit-portal/: Cargo.toml
livekit-portal-ffi/: Cargo.toml  build.rs  cbindgen.toml
livekit-portal-ffi/protocol/: ffi.proto  handle.proto  portal.proto  types.proto
livekit-portal-ffi/src/: cabi.rs  lib.rs  proto.rs
livekit-portal-ffi/src/conversion/: error.rs  types.rs
livekit-portal-ffi/src/server/: config.rs  mod.rs  portal.rs  requests.rs
livekit-portal-ffi/tests/: test_proto_roundtrip.rs
livekit-portal/src/: bytes.rs  chunk.rs  codec.rs  config.rs  data.rs  dtype.rs  error.rs  frame_video.rs  lib.rs  metrics.rs  portal.rs  rpc.rs  rtt.rs  serialization.rs  sync_buffer.rs  types.rs  video.rs
python/: pyproject.toml
python/examples/: _common.py  robot.py  teleoperator.py
python/examples/so101/: pyproject.toml  teleoperator.py
python/livekit/portal/_proto/: ffi_pb2.py  handle_pb2.py  portal_pb2.py  types_pb2.py
python/scripts/: build_native.sh  generate_protos.sh
scripts/: build_ffi_python.sh
src/: config.rs  data.rs  data_publisher.rs  data_receiver.rs  error.rs  lib.rs  portal.rs  serialization.rs  sync_buffer.rs  types.rs  video.rs  video_publisher.rs  video_receiver.rs
