[package]
name = "livekit-portal"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
livekit = { git = "https://github.com/livekit/rust-sdks.git", branch = "dc/feature/user_timestamp" }
thiserror = "2"
parking_lot = "0.12"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
futures-util = "0.3"
bytes = "1"
log = "0.4"
