[package]
name = "livekit-portal-ffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
# `cdylib` is what foreign bindings load at runtime; `lib` is what the
# `uniffi-bindgen` binary imports to walk the exported metadata.
crate-type = ["cdylib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
livekit-portal = { path = "../livekit-portal" }
uniffi = { version = "0.29", features = ["cli", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
thiserror = "2"
parking_lot = "0.12"
log = "0.4"
