[package]
name = "livekit-portal-ffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
# `cdylib` is what foreign bindings load at runtime; `lib` is what the
# `uniffi-bindgen` binary imports to walk the exported metadata.
crate-type = ["cdylib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
livekit-portal = { path = "../livekit-portal" }
# Pinned to main past PR #2824 ("Performance improvement by fixing python
# loop over bytes"): the Python generator emits per-byte loops for
# `_UniffiRustBufferBuilder.write` / `_pack_into`, which stalls the GIL
# for tens of milliseconds per video frame. Fix is merged but not yet in
# a crates.io release (latest published is 0.31.1, branched before the
# fix). Drop this back to a version req once a release ships with it.
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "86a8c0041fc58bb43075dfde349a731d11711188", features = ["cli", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
thiserror = "2"
parking_lot = "0.12"
log = "0.4"
async-trait = "0.1"
