[package]
name = "livekit-portal"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# `rustls-tls-native-roots`: livekit's default feature set doesn't enable any
# TLS backend (its comment: "By default ws TLS is not enabled"). Without this
# the signal client's HTTPS requests (/settings/regions, the WSS upgrade) fail
# against LiveKit Cloud. Matches livekit-ffi's default.
livekit = { git = "https://github.com/livekit/rust-sdks.git", branch = "dc/feature/user_timestamp", features = ["rustls-tls-native-roots"] }
yuv-sys = { git = "https://github.com/livekit/rust-sdks.git", branch = "dc/feature/user_timestamp" }
thiserror = "2"
parking_lot = "0.12"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
futures-util = "0.3"
bytes = "1"
log = "0.4"
